--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<DOCUMENT HTML>
+<!doctype html>
+
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+
+	<title>The Jump Event</title>
+	<meta name="description" content="The Jump Event">
+	<meta name="author" content="1UP.uy">
+
+	<link rel="stylesheet" href="css/s.css">
+	<script src="js/parallax.js"></script>
+</head>
+
+<body>
+	<div id="container">
+  <img src="https://unsplash.it/1000/1000?random=" />
+  <div class="logo">Jump</div>
+</div>
+</body>
+</html>
