--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<div id="container" style=" background-image:url('https://picsum.photos/1920/1080?random')">
+	<div id="container" style="background-image:url('https://picsum.photos/1920/1080?random'); ">
 		<!-- <img src="https://picsum.photos/1920/1080?random" /> -->
 		<div class="logoShade">Jump</div>
 		<div class="logo">Jump</div>
