--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-	<div id="container" style="background-image:url('https://picsum.photos/1920/1080?random'); ">
-		<!-- <img src="https://picsum.photos/1920/1080?random" /> -->
+	<div id="container">
+		<img src="https://picsum.photos/1920/1080?random" />
 		<div class="logoShade">Jump</div>
 		<div class="logo">Jump</div>
 		<div class="comingSoon"></div>
@@ -27,7 +27,6 @@
 		$("#container").mousemove(function(e) {
 			parallaxIt(e, ".logo", -150);
 			parallaxIt(e, ".logoShade", -125);
-			parallaxIt(e, "img", -25);
 		});
 
 		function parallaxIt(e, target, movement) {
